--- a/about-us.html
+++ b/about-us.html
@@ -18,12 +18,13 @@
         <nav>
             <div class="navbar">
                 <div class="logo">
-                    <a href="index-2.html">
+                    <a href="index.html">
                         <img src="images/logo.png" alt="logo">
                     </a>
                 </div>
                 <div class="menu-btn">
-                    <a href="index-2.html">Home</a>
+                    <a href="index.html">Home</a>
+                    <a href="./#services">Our Services</a>
                     <a href="about-us.html">About Us</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
@@ -41,22 +42,28 @@
     <section class="about-section about-page">
         <div class="about">
             <div class="about-content">
-                <h1>We are</h1>
+                <h1>About Us</h1>
                 <p>
-                    Our team is made up of specialists that bring diverse views and skill sets to the table and
-                    collaborate to develop comprehensive solutions that match our clients' demands. We have firsthand
-                    experience working with wide ranging clients from manufacturing, hospitality, real estate,
-                    consulting and technology industries to name a few. We have made considerable efforts in
-                    establishing an inclusive work atmosphere where everyone's contributions are acknowledged and
-                    respected. Our strength lies in designing and developing new and innovative solutions for our
-                    clients tailor made to their requirements by utilising the skills, experience and knowledge of each
-                    member of our team.
-                    <br>
-                    <br>
-                    As a startup, we are motivated by a desire to see our clients succeed, and are thus committed to
-                    providing excellent customer service and support throughout the product development process. Whether
-                    it is advising our clients on design and development or directly working with them to improve their
-                    user experience, our aim is to help them reach their business goals and drive growth.
+                    Our team comprises 4 individuals with diverse professional backgrounds possessing unique strengths.
+                    <br><br>
+                    Abhishek the Founder: Scaled up a startup from scratch to a 10 Million yearly turnover within a span
+                    of just 3 years. His eye for profitability over valuation helped crack big deals in Middle East
+                    Market.<br><br>
+
+                    Akul the designing goat: He is our head and soul of everything related to designing, the brain
+                    behind curating impressions that last a lifetime.
+                    <br><br>
+                    Abhishek Rawat the Conflict resolver: Our de facto solution orient guy who likes to get his hands
+                    dirty in order to get any project completed on the timeline.<br><br>
+
+                    Kamal the enforcer: Having worked in multiple industries like IT, Real Estate & Travel, he has
+                    witnessed the real-time communication & delivery gap between the client and vendor and is on a
+                    mission to make the process seamless and stress free.<br><br>
+                    With the combined strength of our team, we are in the process of revolutionizing the entire buyer &
+                    seller ecosystem. We pride ourselves in calling a new-age startup that defies traditional values and
+                    brings liberal ideas to amplify not only pre-sales but also after-sales service
+
+
                 </p>
             </div>
             <div class="about-img">
@@ -74,12 +81,14 @@
                         <img src="images/Avatar1.png" alt="">
                     </div>
                     <div class="name"><b>Abhishek Kumar</b></div>
+                    <div class="designation">Founder</div>
                 </div>
                 <div class="team-box">
                     <div class="team-img team-2">
                         <img src="images/Avatar2.png" alt="">
                     </div>
                     <div class="name"><b>Abhishek Rawat</b></div>
+                    <div class="designation">Delivery Coordinator</div>
                 </div>
                 <div class="team-box">
                     <div class="team-img team-3">
@@ -87,6 +96,7 @@
                     </div>
                     <div class="name">
                         <b>Akul Bharti</b>
+                        <div class="designation">Operations Coordinator</div>
                     </div>
                 </div>
                 <div class="team-box">
@@ -94,8 +104,22 @@
                         <img src="images/Avatar4.png" alt="">
                     </div>
                     <div class="name"><b>Kamal Kalita</b></div>
+                    <div class="designation">B2B Sales</div>
                 </div>
             </div>
+    </section>
+
+     <!-- contact section -->
+     <section class="contact-section" style="background-color: #ffff;  height: 75vh;">
+        <div class="contact-content" style="color: #000;">
+            <h1 class="contact-title">Contact Us</h1>
+            <p>We've collaborated with diverse clients including esteemed enterprises, high growth startups, and bright
+                individuals. Let's discuss about your requirements to discover how our expertise can strengthen your
+                objectives.
+                <br>To get in touch, please email us at: <a href="mailto:designingxinfinity@gmail.com"
+                    style="color: #000;">designingxinfinity@gmail.com</a>
+            </p>
+        </div>
     </section>
 
     <!-- Footer section -->
