--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,13 @@
         <nav>
             <div class="navbar">
                 <div class="logo">
-                    <a href="index-2.html">
+                    <a href="index.html">
                         <img src="images/logo.png" alt="logo">
                     </a>
                 </div>
                 <div class="menu-btn">
-                    <a href="index-2.html">Home</a>
+                    <a href="index.html">Home</a>
+                    <a href="./#services">Our Services</a>
                     <a href="about-us.html">About Us</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
@@ -39,10 +40,10 @@
 
     <section class="contact-section">
         <div class="contact-content">
-            <div class="common-content">We'd love to work with you</div>
-            <p>We’ve worked with clients of all sizes, from enterprise brands to funded startups. Let’s talk about your
-                project and how we can help provide value. <br>
-                Mail your query at: <a href="mailto:designingxinfinity@gmail.com">designingxinfinity@gmail.com</a></p>
+            <div class="common-content">Have a QUESTION? WE have ANSWERS!</div>
+            <p>We've collaborated with diverse clients including esteemed enterprises, high growth startups, and bright individuals. Let's discuss about your requirements to discover how our expertise can strengthen your objectives. 
+                <br>
+                To get in touch, please email us at: <a href="mailto:designingxinfinity@gmail.com">designingxinfinity@gmail.com</a></p>
         </div>
     </section>
 
