--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 
 <!-- Mirrored from designing-infinity.vercel.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 30 Jul 2023 13:40:15 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,12 +20,13 @@
         <nav>
             <div class="navbar">
                 <div class="logo">
-                    <a href="index-2.html">
+                    <a href="index.html">
                         <img src="images/logo.png" alt="logo">
                     </a>
                 </div>
                 <div class="menu-btn">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
+                    <a href="#services">Our Services</a>
                     <a href="about-us.html">About Us</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
@@ -42,84 +45,79 @@
     <section class="section hero-section">
         <div class="hero">
             <div class="common-content">
-                We are a Team of Startup enthusiasts from Diverse Backgrounds committed towards delivering Comprehensive
-                Solutions To our Clients.
+                Your Vision, Our Expertise <br> Crafting Spectacular Digital Experiences 
             </div>
         </div>
     </section>
 
 
     <!-- Services section -->
-    <section class="service-section">
+    <section class="service-section" id="services">
         <h1 class="service-title">Our Services</h1>
         <div class="services">
-            <div class="service-box business">
-                <div class="service-content">
-                    <h1>Product auditing and Strategy Consulting</h1>
-                    <p>Our product auditing and strategy consulting service helps businesses assess the effectiveness
-                        and performance of their products, identify areas for improvement, and develop comprehensive
-                        strategies to enhance their competitive advantage and drive growth. We provide expert analysis,
-                        actionable insights, and tailored recommendations to optimize your product portfolio and achieve
-                        your business objectives.</p>
-                </div>
-            </div>
-
-            <div class="service-box ux">
-                <div class="service-content">
-                    <h1>UX Design</h1>
-                    <p>Our UX design service focuses on developing simple, user-friendly interfaces that engage users
-                        and please consumers. By doing user research, prototyping, and iterative testing, we apply a
-                        human-centered design approach to ensure fluid interactions and an aesthetically pleasing
-                        interface. Our objective is to create memorable and influential experiences that improve user
-                        pleasure and eventually fuel commercial success.</p>
-                </div>
-            </div>
-
             <div class="service-box ui">
                 <div class="service-content">
-                    <h1>UI Design</h1>
-                    <p>Our UI design service focuses on developing aesthetically pleasing and approachable user
-                        interfaces that successfully convey your brand's identity and message. We create appealing and
-                        clear interfaces that improve user experiences by fusing usability issues with aesthetic design
-                        concepts. With a focus on consistency, accessibility, and modern design trends, we aim to
-                        deliver UI solutions that captivate users and drive conversion rates.</p>
+                    <h1>UI/UX Design</h1>
+                    <p>Aesthetically pleasing and engaging user interfaces that effectively communicate the brand's
+                        identity and message. To ensure seamless interactions as well as visually appealing interfaces,
+                        we make an effective use of prototyping, iterative testing, and a human-centered design
+                        approach. Capitalizing on our unique expertise of comprehensive user research, we develop
+                        user-friendly interfaces that amplify user satisfaction and drive commercial success.</p>
                 </div>
             </div>
 
             <div class="service-box web">
                 <div class="service-content">
                     <h1>Website Creation</h1>
-                    <p>Our website design service specialises in creating aesthetically appealing and useful websites
-                        that capture the essence of your business and are tailored to your individual requirements. We
-                        also provide e-commerce store integration so you can easily sell goods or services online and
-                        provide your consumers a safe and pleasant purchasing experience. With the help of our
-                        experience, we make sure that your website and e-commerce store operate in unison to promote
-                        development and help you reach your company objectives.</p>
+                    <p>Aesthetically appealing and functional websites that are tailored to your requirements and
+                        capture the crux of your business. We also do e-commerce store integration thus enabling you to
+                        easily sell goods and services which provide customers a safe and pleasant purchasing
+                        experience. Our expertise ensures that your website and e-commerce store operate in unison to
+                        help you attain your company objectives.</p>
                 </div>
             </div>
 
             <div class="service-box dashboard">
                 <div class="service-content">
-                    <h1>Dashboard</h1>
-                    <p>Our dashboard creation service helps you transform complex data into actionable insights and
-                        visualizations. We design and develop intuitive dashboards that provide a comprehensive view of
-                        your key metrics, enabling you to make informed decisions and track the performance of your
-                        business in real-time. With our expertise in data visualization and analytics, we empower you to
-                        drive efficiency, identify trends, and optimize your strategies for success.</p>
+                    <h1>Dashboard Creation</h1>
+                    <p>Complex data transformed into insightful visualizations through intuitive dashboards that provide
+                        a comprehensive view of your key metrics thus enabling you to make informed decisions and track
+                        the performance of your business in real-time. Our expertise in data visualization and analytics
+                        empowers you to drive efficiency, identify trends, and optimize your strategies for success.</p>
+                </div>
+            </div>
+
+            <div class="service-box business">
+                <div class="service-content">
+                    <h1>Product Testing and Improvement</h1>
+                    <p>Assess the effectiveness and performance of your digital products, identify areas for
+                        improvement, and develop comprehensive strategies to enhance their competitive advantage and
+                        drive growth. Our expertise helps to align your brand with its core values.</p>
                 </div>
             </div>
 
             <div class="service-box development">
                 <div class="service-content">
-                    <h1>Development</h1>
-                    <p>Our fully development solutions for your product service line provide end-to-end support in
-                        transforming your ideas into market-ready products. Our team of professionals covers all phase
-                        of the product development lifecycle, from idea validation through design, development, testing,
-                        and deployment. We leverage the latest technologies and industry best practices to deliver
-                        innovative and scalable solutions that meet your business objectives and exceed customer
-                        expectations.</p>
+                    <h1>Product Development</h1>
+                    <p>Comprehensive development solutions transforming your ideas into market-ready products. Our
+                        experts cover all phases of the product development lifecycle from idea validation to design,
+                        development, testing, and deployment. We leverage latest technologies and best industry
+                        practices to deliver innovative and scalable solutions that meet your business objectives and
+                        exceed customer expectations.</p>
                 </div>
             </div>
+
+            <div class="service-box ux">
+                <div class="service-content">
+                    <h1>Elevating You</h1>
+                    <p>Elevate your online presence with our profile building service. Make your mark with a curated
+                        profile that sets you apart. Highlight strengths, experiences, and aspirations while resonating
+                        with employers, clients, or connections. Whether you're a job hunter, a professional striving
+                        for growth, or an individual that wants to showcase their unique talents, our expert team crafts
+                        compelling profiles tailored to your goals.</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -128,22 +126,28 @@
     <section class="about-section">
         <div class="about">
             <div class="about-content">
-                <h1>We are</h1>
+                <h1>About US</h1>
                 <p>
-                    Our team is made up of specialists that bring diverse views and skill sets to the table and
-                    collaborate to develop comprehensive solutions that match our clients' demands. We have firsthand
-                    experience working with wide ranging clients from manufacturing, hospitality, real estate,
-                    consulting and technology industries to name a few. We have made considerable efforts in
-                    establishing an inclusive work atmosphere where everyone's contributions are acknowledged and
-                    respected. Our strength lies in designing and developing new and innovative solutions for our
-                    clients tailor made to their requirements by utilising the skills, experience and knowledge of each
-                    member of our team.
-                    <br>
-                    <br>
-                    As a startup, we are motivated by a desire to see our clients succeed, and are thus committed to
-                    providing excellent customer service and support throughout the product development process. Whether
-                    it is advising our clients on design and development or directly working with them to improve their
-                    user experience, our aim is to help them reach their business goals and drive growth.
+                    Our team comprises 4 individuals with diverse professional backgrounds possessing unique strengths.
+                    <br><br>
+                    Abhishek the Founder: Scaled up a startup from scratch to a 10 Million yearly turnover within a span
+                    of just 3 years. His eye for profitability over valuation helped crack big deals in Middle East
+                    Market.<br><br>
+
+                    Akul the designing goat: He is our head and soul of everything related to designing, the brain
+                    behind curating impressions that last a lifetime.
+                    <br><br>
+                    Abhishek Rawat the Conflict resolver: Our de facto solution orient guy who likes to get his hands
+                    dirty in order to get any project completed on the timeline.<br><br>
+
+                    Kamal the enforcer: Having worked in multiple industries like IT, Real Estate & Travel, he has
+                    witnessed the real-time communication & delivery gap between the client and vendor and is on a
+                    mission to make the process seamless and stress free.<br><br>
+                    With the combined strength of our team, we are in the process of revolutionizing the entire buyer &
+                    seller ecosystem. We pride ourselves in calling a new-age startup that defies traditional values and
+                    brings liberal ideas to amplify not only pre-sales but also after-sales service
+
+
                 </p>
             </div>
             <div class="about-img">
@@ -162,13 +166,15 @@
 
 
     <!-- contact section -->
-    <section class="contact-section" style="background-color: #ffff;  height: 60vh;">
+    <section class="contact-section" style="background-color: #ffff;  height: 75vh;">
         <div class="contact-content" style="color: #000;">
-            <h1 class="contact-title">Contact Us at</h1>
-            <p>We’ve worked with clients of all sizes, from enterprise brands to funded startups. Let’s talk about your
-                project and how we can help provide value. <br>
-                Mail your query at: <a href="mailto:designingxinfinity@gmail.com"
-                    style="color: #000;">designingxinfinity@gmail.com</a></p>
+            <h1 class="contact-title">Contact Us</h1>
+            <p>We've collaborated with diverse clients including esteemed enterprises, high growth startups, and bright
+                individuals. Let's discuss about your requirements to discover how our expertise can strengthen your
+                objectives.
+                <br>To get in touch, please email us at: <a href="mailto:designingxinfinity@gmail.com"
+                    style="color: #000;">designingxinfinity@gmail.com</a>
+            </p>
         </div>
     </section>
 
@@ -209,4 +215,5 @@
 
 
 <!-- Mirrored from designing-infinity.vercel.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 30 Jul 2023 13:40:17 GMT -->
+
 </html>
